# Nonoka-agent

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
examples/: test_new_features.py
nonoka/: __init__.py
nonoka/backends/checkpoint/: memory.py  noop.py  redis.py  sqlite.py
nonoka/config/: __init__.py  loader.py  models.py  resolver.py
nonoka/core/: __init__.py  agent.py  agent_tool.py  builder.py  checkpoint.py  config.py  config_loader.py  context.py  errors.py  event.py  execution.py  extensions.py  external_mcp.py  external_skill.py  external_tool.py  hooks.py  hot_reload.py  llm.py  logger.py  memory.py  paradigm.py  plan.py  planner.py  prompt.py  registry.py  runner.py  scheduler.py  session.py  system_prompts.py  tool.py  tool_response.py  trace.py  types.py
nonoka/skills/: __init__.py  loader.py  registry.py  skill.py
nonoka/tools/: __init__.py  git.py  lsp.py  planning.py  repo_map.py  skills.py
tests/: test_checkpoint_scheduler.py  test_git_tools.py  test_planning_tool.py  test_repo_map_tools.py
tests/backends/: test_sqlite_checkpoint.py  test_sqlite_memory.py
tests/core/: test_agent.py  test_agent_metadata.py  test_agent_tool.py  test_checkpoint.py  test_checkpoint_scheduler.py  test_config.py  test_errors.py  test_execution.py  test_extensions.py  test_external_mcp.py  test_external_skill.py  test_external_tools.py  test_hooks.py  test_hooks_integration.py  test_hooks_intercept.py  test_llm.py  test_loop_detection.py  test_memory.py  test_observability.py  test_optimizations.py  test_plugin_manager.py  test_prompt.py  test_ref_resolution.py  test_registry.py  test_runner.py  test_runner_backend_resolution.py  test_scheduler.py  test_skills.py  test_system_prompts.py  test_tool.py  test_tool_response.py
tests/ext/: test_eval_checkers.py  test_eval_cli.py  test_eval_comparison.py  test_eval_datasets.py  test_eval_external.py  test_eval_harbor.py  test_eval_huggingface.py  test_eval_matrix.py  test_eval_tau2_bridge.py  test_eval_tau2_grounding.py  test_eval_terminal_bench.py  test_eval_tools.py  test_gateway.py  test_gateway_extensions.py  test_gateway_integration.py  test_hitl.py  test_mcp_integration.py
tests/integration/: test_agent_behavior_llm.py  test_agent_tool_llm.py  test_eval_runner.py  test_hitl_llm.py  test_hot_reload.py  test_plan_generation.py  test_prompt_and_metadata_llm.py  test_sqlite_backend_llm.py
tests/skills/: test_skill.py
(+50 files in other folders)
