[project]
name = "nonoka"
version = "1.0.0.dev1"
description = "A production-grade, type-safe Python Agent framework"
authors = [
    {name = "fyerfyer", email = "fyerfyer@126.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anyio>=4.13.0",
    "litellm>=1.86.2",
    "mcp>=1.27.2",
    "mem0ai>=2.0.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "structlog>=25.5.0",
]


[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
